--- a/sub.html
+++ b/sub.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <nav>
         <h1>Welcome to basic calculator</h1>
         <h2>Select your operation</h2>
