--- a/sub.html
+++ b/sub.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </nav>
-
+<!-- subtract function -->
     <div class="cal">
         <div>
             <h5>Enter A </h5>
