--- a/div.html
+++ b/div.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
     </nav>
-
+<!-- Functions -->
     <div class="cal">
         <div>
             <h5>Enter A </h5>
