--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <!-- Calculator Functions-->
+    <!-- Calculator Functions--->
 
     <div class="cal">
         <div>
